added jacoco plugin, now we can export coverage into sonar